tracker: post-mortem for libraries/ partial-state migration leak
Captures today's diagnostic chain for the Forge server bring-up failure
loop that was rooted in 7 stub libraries/ files committed to the repo
pre-migration. Documents the root cause sequence (pre-migration
interrupted Forge install -> broad git add -> committed -> migration
carried stubs over while leaving the OLD server's real libraries
behind on its NTFS filesystem -> Phase 2 coarse check silently passed
the partial state -> Java launch failed -> every manual fix got
re-restored by next sync_from_repo cycle).

Generalizable lesson captured at the bottom: install artifacts (Forge,
npm, pip, gradle, etc.) must be in .gitignore from day 1 - the
'commit it just to be safe' instinct creates latent bugs because dev
environments keep working via accumulated untracked state while fresh
installs see only what git tracks.

Also flags the deferred follow-up: iridescentserver.bat banner RAM
recommendation needs updating from '8-12 GB' to a player-count-aware
formula like '12 GB base + 2 GB per concurrent player' once final
TPS sizing lands.